# germanlegaltexts

./: LICENSE  README.md  pyproject.toml
src/germanlegaltexts/: GermanJudgementDownloader.py  GermanLawDownloader.py  GermanLegalTextDownloader.py  __init__.py
src/germanlegaltexts/model/: Gesetzbuch.py  Normverweis.py  Rechtsprechung.py
tests/: README.md  conftest.py  test_async_downloaders.py  test_downloader.py  test_gesetzbuch.py  test_judgement_downloader.py  test_normverweis.py  test_rechtsprechung.py
