[project]
name = "germanlegaltexts"
version = "0.4.1"
authors = [
  { name="Malte Weber", email="dev-weber@posteo.de" },
]
description = "A package which implements functionality to download and parse german legal texts."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "httpx>=0.28",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/malteweber/germanlegaltexts"
Repository = "https://github.com/malteweber/germanlegaltexts"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "sphinx>=9.1.0",
]
